--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="wrapper">
         <input type="color" id="color">
-        <button id="remove">
+        <button class="remove">
             <i class="fa-solid fa-eraser"></i>
         </button>
         <button class="down">
