--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
-
     <link rel="stylesheet" href="./main.css">
-    <title>Document</title>
+    <title>Paint</title>
 </head>
+
 <body>
     <div class="wrapper">
         <input type="color" id="color">
@@ -29,8 +29,8 @@
         <button class="clear">
             <i class="fa-sharp fa-solid fa-broom"></i> 
         </button>
-       </div>
-    <canvas id="canvas" ></canvas>
+    </div>
+    <canvas id="canvas" height="800" width="1400" ></canvas>
     <script src="./App.js"></script>
 </body>
 </html>
