--- a/index.html
+++ b/index.html
@@ -29,8 +29,17 @@
         <button class="clear">
             <i class="fa-sharp fa-solid fa-broom"></i> 
         </button>
+        <input type="file" id="file" accept="image/gif, image/jpeg ,image/png">
+        <label  class="renderfile" for="file">
+            <i class="fa-solid fa-image"></i>
+            image
+        </label>
+        <br>
+    
+        <img class="image"  alt="">
+        
     </div>
-    <canvas id="canvas" height="800" width="1400" ></canvas>
+    <canvas id="canvas" height="1200" width="1400" ></canvas>
     <script src="./App.js"></script>
 </body>
 </html>
