--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="./main.css">
     <title>Paint</title>
 </head>
@@ -12,6 +13,14 @@
 <body>
     <div class="wrapper">
         <input type="color" id="color">
+        <button class="rectangle">
+            <i class='bx bxs-rectangle'></i>
+        </button>
+        <button class="circle">
+            <i class="fa-solid fa-circle"></i>        </button>
+        <button class="paintbrush">
+            <i class="fa-solid fa-paintbrush"></i>
+        </button>
         <button class="remove">
             <i class="fa-solid fa-eraser"></i>
         </button>
