--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="paint-logo.avif">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="./main.css">
@@ -17,8 +18,9 @@
             <i class='bx bxs-rectangle'></i>
         </button>
         <button class="circle">
-            <i class="fa-solid fa-circle"></i>        </button>
-        <button class="paintbrush">
+            <i class="fa-solid fa-circle"></i>   
+         </button>
+        <button class="paintbrush active">
             <i class="fa-solid fa-paintbrush"></i>
         </button>
         <button class="remove">
